--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
+/*? Преднастройки START */
 *, *::after, *::before {
     box-sizing: border-box;
 }
 
 html, body {
+    font-family: 'Roboto';
     font-size: 62.5%;
     font-weight: normal;
     color: #fff;
@@ -17,6 +19,8 @@ img {
 }
 
 a {
+    font-family: 'Roboto';
+    font-weight: normal;
     text-decoration: none;
     color: inherit;
 }
@@ -31,6 +35,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0;
 }
+/*! Преднастройки END  */
 
 .container {
     width: 130rem;
@@ -43,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
     color: #fff;
 }
 
+/*? header START */
 .header {
     padding: 4rem 11rem 4rem 8rem;
     position: absolute;
@@ -69,6 +75,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header__nav a {
     font-size: 1.6rem;
+    line-height: 150%;
 }
 
 .header__logo {
@@ -81,8 +88,12 @@ h1, h2, h3, h4, h5, h6 {
     margin-left: 55.3rem;
     background: linear-gradient(94.26deg, #C89AFC 9.51%, #7C6AFA 90.23%);
     font-size: 1.6rem;
+    line-height: 150%;
 }
+/*! header END */
 
+/*? main START */
+/*? section .main-display START */
 .main-display__background {
     position: absolute;
     top: 0;
@@ -97,10 +108,13 @@ h1, h2, h3, h4, h5, h6 {
 .main-display .container {
     position: relative;
     z-index: 10;
+    padding-bottom: 28.8rem;
 }
 
 .main-display__header {
+    font-weight: bold;
     font-size: 6.4rem;
+    line-height: 140%;
     max-width: 76rem;
     margin-bottom: 5rem;
 }
@@ -113,6 +127,8 @@ h1, h2, h3, h4, h5, h6 {
 .main-display__button {
     background: linear-gradient(141deg, #df5950 0%, #451046 100%);
     font-size: 1.6rem;
+    font-weight: bold;
+    line-height: 150%;
 }
 
 .timer__item {
@@ -131,9 +147,108 @@ h1, h2, h3, h4, h5, h6 {
 
 .timer__count {
     font-size: 3.6rem;
+    font-weight: bold;
+    line-height: 140%;
 }
 
 .timer__text {
     font-size: 1.6rem;
+    line-height: 140%;
     opacity: 0.4;
 }
+/*! section .main-display END */
+
+/*? section .work START */
+.work {
+    padding: 20rem;
+    padding: 24.3rem;
+}
+
+.work__wrap {
+    display: flex;
+}
+
+.work__img {
+    width: 52.6rem;
+    height: 49.9rem;
+    margin-right: 13.9rem;
+}
+
+.work__text {
+    max-width: 63.6rem;
+    padding-top: 6.9rem;
+}
+
+.work__header {
+    margin-bottom: 4.5rem;
+    font-weight: bold;
+    font-size: 4.8rem;
+    line-height: 140%;
+}
+
+.work__description {
+    font-size: 1.6rem;
+    line-height: 160%;
+}
+/*! section .work END */
+
+/*? section .process START */
+.process {
+    padding-bottom: 20rem;
+}
+
+.process__img {
+    width: 9rem;
+    height: 4.5rem;
+    margin-right: 2rem;
+}
+
+.process__header {
+    font-weight: bold;
+    font-size: 4.8rem;
+    line-height: 140%;
+    margin-bottom: 4.9rem;
+}
+
+.process__description {
+    max-width: 41.1rem;
+    margin-bottom: 8rem;
+    font-size: 1.6rem;
+    line-height: 160%;
+    opacity: 0.5;
+}
+
+.process__columns {
+    display: flex;
+}
+
+.process__columns::after {
+    content: '';
+    display: block;
+    width: 130rem;
+    height: .2rem;
+    position: absolute;
+    top: 31rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background: linear-gradient(142deg, #c89afc 0%, #7c6afa 100%);
+}
+
+.process__item {
+    max-width: 30.6rem;
+}
+
+.process__work {
+    font-size: 3.6rem;
+    font-weight: bold;
+    line-height: 140%;
+    margin-bottom: 6.5rem;
+}
+
+.process__text {
+    font-size: 1.4rem;
+    line-height: 160%;
+    opacity: 0.5;
+}
+/*! section .process END */
+/*! main END */
